--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,23 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
 }
-p {
-  font-family: "HelveticaNeue";
+ul ol {
+  text-decoration-style: none;
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+  list-style-type: none;
+  color: #ffffff;
+  margin: 15px;
+}
+.li {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  color: white;
 }
 @font-face {
   font-family: "Helvetica Neue Bold";
@@ -30,133 +43,89 @@ p {
   font-style: normal;
   font-display: swap;
 }
-header nav {
-  display: inline-block;
-  margin-left: 250px;
-  vertical-align: top;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: blue;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1920px;
+  margin: 0 auto;
+  color: white;
+  padding: 30px;
 }
-.picture {
-  margin-left: 80px;
-}
-div {
-  margin-left: 80px;
-  padding-left: 25px;
+.nav {
+  display: flex;
+  flex-wrap: wrap;
 }
 .contact {
-  background-color: #ffffff;
+  font-weight: bold;
+  cursor: pointer;
+  background: none;
+  border: 1px #000 solid;
   border-radius: 28px;
-  width: 160px;
-  padding: 18px 43px 18px 35px;
-  height: unset;
+  padding: 7px 16px;
+  line-height: 0.5;
   text-align: center;
-}
-li {
-  display: inline-block;
-  height: 18px;
-  height: 50px;
-  width: 50px;
-  margin-right: 50px;
-}
-header {
-  background-color: #0020f4;
-  height: 388px;
-  margin-bottom: -150px;
-}
-header img {
-  margin-left: 240px;
-}
-a {
   text-decoration: none;
-}
-ul,
-ol {
-  list-style-type: none;
-}
-header img {
-  width: 115px;
-}
-h2 {
-  /* text-align: center; */
-  color: #171717;
-  font-size: 28px;
-  margin-left: 80px;
-}
-.first-p {
-  margin-top: 60px;
-}
-p {
-  font-size: 16px;
-  color: #171717;
-  text-align: left;
-  margin-bottom: 18px;
-}
-h3 {
-  font-size: 16px;
-  background-color: #0a22f4;
-  background-position: right bottom;
-  border-radius: 28px;
-  width: 341px;
-  height: 55px;
-  text-align: center;
-  margin-top: 76px;
-  margin-left: 500px;
-}
-h3 a {
-  color: #ffffff;
-  text-align: center;
-  background-position: right bottom;
-}
-nav a {
-  font-size: 16px;
-  color: #ffffff;
-}
-.contact {
-  background-color: white;
-  border-radius: 28px;
-  width: 160px;
-  height: 65px;
-  text-align: center;
+  background-color: #ffffff;
+  color: #000000;
 }
 .contact a {
   color: #000000;
-  width: 160px;
+}
+.picture img {
+  width: 700px;
+  height: 350px;
+  margin-top: -10px;
+  max-width: 100%;
+}
+.picture {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.picture h2 {
+  margin-top: 20px;
+}
+.img4 {
+  display: flex;
+  flex-wrap: wrap;
+}
+.picture2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* .img4 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 25px;
+}
+.img4 img {
+  max-width: 100%;
+} */
+.paragraph {
+  align-items: center;
+}
+h3 {
+  background-color: blue;
+  width: 350px;
+  height: 50px;
+  border-radius: 28px;
+  text-align: center;
+  padding: 10px;
 }
 .add-more {
-  padding: 18px 77px 18px 57px;
+  align-items: center;
+}
+.details {
+  margin-top: 30px;
+  align-items: center;
 }
 footer {
-  display: inline-block;
-  margin-top: 160px;
-  background-color: #0a22f4;
-  color: #ffffff;
-  height: 1080px;
-}
-footer p {
-  color: #ffffff;
-}
-footer h5 {
-  display: inline-block;
-  margin-bottom: 800px;
-  margin-left: 800px;
-}
-footer p,
-h1,
-h4 {
-  margin-left: 240px;
-}
-footer p {
-  margin-top: 30px;
-}
-.final-p {
-  display: inline-block;
-  margin-top: 850px;
-}
-h2,
-.add-more,
-h1 {
-  font-family: "Helvetica Neue Bold";
-}
-p,
-nav {
-  font-family: "Helvetica Neue";
+  background-color: blue;
+  width: 100%;
+  margin-top: 50px;
 }
